fixed scrollbar issues. fixed missing breadcrumb image.

--- a/apps/files_texteditor/css/style.css
+++ b/apps/files_texteditor/css/style.css
@@ -1,11 +1,8 @@
 #editor{
 	position: absoloute;
 	display: block;
-	padding-top: 40px
-/*	
-	top: 41px;
+	top: 80px;
 	left: 160px;
-*/
 }
 #editorwrapper{
 	position: absoloute;
